# rs-yescrypt-hash

./: .gitignore  Cargo.toml  build.rs
ext/yescrypt/: yescrypt-simd_c.h
src/: lib.rs  yescrypt_hash.c  yescrypt_hash.h
src/yescrypt/: yescrypt-simd_c.h
