[package]
name = "rs-yescrypt-hash"
authors = ["Gabriel Mendoza <gabrielemf@hotmail.com>"]
description = "Bindings into C for `Yescrypt` algorithm"
repository = "https://github.com/mendozg/rs-yescrypt-hash"
version = "0.5.0"
build = "build.rs"
keywords = ["rust", "crypto", "yescrypt", "POW"]
readme = "README.md"
edition = "2021"
license = "MIT"


[build-dependencies]
cc = "1.0.77"

[dependencies]
clippy = {version = "0.0", optional = true}
hex = "0.4"
unicode-segmentation = "0.1.2"

[lib]
name = "rs_yescrypt_hash"
crate-type = ["rlib", "cdylib"]

[profile.release]
lto = "thin"
opt-level = 3

[features]
dev = ["clippy"]
